# GoldScript

./: .gitignore  CMakeLists.txt  README.md  gs-trader.h
src/: CMakeLists.txt  compiler-info.h  gs-item.c  gs-item.h  gs-items.c  gs-items.h  gs-linked-types.h  gs-linked.c  gs-linked.h  gs-memory.c  gs-memory.h  gs-parse.c  gs-parse.h  gs-types.h
test/: CMakeLists.txt  test_gs-item.c  test_gs-memory.c
